--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <div class="tittle">
+        <h1>ROCK PAPER SCISSORS GAME !!</h1>
+    </div>
+    <div class="selection">
+        <button class="btn" id="rock">
+            <img src="./img/Rock.png" alt="">
+        </button>
+        <button class="btn" id="paper">
+            <img src="./img/Paper.png" alt="">
+        </button>
+        <button class="btn" id="scissors">
+            <img src="./img/Scissors.png" alt="">
+        </button>
+    </div>
+    <div class="game">
+        <div>You:
+            <span>0</span>
+        </div>
+        <div>Computer:
+            <span>0</span>
+        </div>
+    </div>
     
 
     <script src="./main.js"></script>
