--- a/index.html
+++ b/index.html
@@ -34,49 +34,19 @@
             CPU
         </div>
         <div class="box b4">
-            <div>POINTS:</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
+            POINTS:
+            <h1 style="background-color: #000814; color: #FFC300;" id="pPoint" class="number">0</h1>
         </div>
         <div class="box b5">
-            ROCK VS PAPER
+            <p style="background-color: #000814;" id="massage">ROCK VS ROCK</p>
         </div>
         <div class="box b6">
-            <div>POINTS:</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
-            <div class="number">0</div>
+            POINTS:
+            <h1 style="background-color: #000814; color: #FFC300;" id="cpuPoint" class="number">0</h1>
         </div>
-        <div class="box b7">
-            TOTAL
-        </div>
-        <div class="box b8">
-            
-        </div>
-        <div class="box b9">
-            TOTAL
-        </div>
-
     </div>
 
-
-
-    <!-- <div class="game">
-        <div>You
-            <span id="youPoints">0</span>
-        </div>
-        <div>
-            <span id="cpuPoints">0 </span>
-            Computer
-        </div>
-    </div> -->
     
-
     <script src="./main.js"></script>
 </body>
 </html>
