Sounds and more text

--- a/index.html
+++ b/index.html
@@ -28,25 +28,30 @@
             PLAYER
         </div>
         <div class="box b2">
-            
+            <h1></h1>
         </div>
         <div class="box b3">
             CPU
         </div>
         <div class="box b4">
             POINTS:
-            <h1 style="background-color: #000814; color: #FFC300;" id="pPoint" class="number">0</h1>
+            <h1 style="background-color: #001D3D; color: #FFC300;" id="pPoint" class="number">0</h1>
         </div>
         <div class="box b5">
-            <p style="background-color: #000814;" id="massage">ROCK VS ROCK</p>
+            <p id="massage">Choose any of your three weapons to start. Whoever gets 5 points first will be the winner.</p>
         </div>
         <div class="box b6">
             POINTS:
-            <h1 style="background-color: #000814; color: #FFC300;" id="cpuPoint" class="number">0</h1>
+            <h1 style="background-color: #001D3D; color: #FFC300;" id="cpuPoint" class="number">0</h1>
         </div>
     </div>
 
-    
+    <!-- <div class="btn-container">
+        <button id="btn-battle" class="btn-battle">Battle</button>
+    </div> -->
+
+
+
     <script src="./main.js"></script>
 </body>
 </html>
